--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
     -->
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="./font/style.css">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
+    <title>Words, mine!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
