--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/font/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
-    <title>Words, mine!</title>
+    <title>Words Mine!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
