Apply minor change

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/logo-words-mine.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Words Mine! tools for quick gathering of words" />
+  <meta name="description" content="Word Mine! tools for quick gathering of words" />
   <meta name="author" content="Goware Technology JSC" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-words-mine.png" />
   <!--
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/font/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
-  <title>Words Mine!</title>
+  <title>Word Mine!</title>
 </head>
 
 <body>
