--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/font/stylesheet.css">
   <link href="https://fonts.googleapis.com/css2?family=Passion+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <title>Words Mine!</title>
 </head>
 
